# social-media-agents

./: .gitignore  README.md  pyproject.toml
scripts/: cli.py
src/marketing_agents/: __init__.py  agents.py  config.py  image_generator.py  pipeline.py  prompts.py  publisher.py  scheduler.py  tools.py
tests/: test_pipeline.py
